--- a/tracker/A.html
+++ b/tracker/A.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
+    </head>
     <body>
-        <img src = "http://localhost:8080?url=A.html"></img>
+        <img src = "http://localhost:8080?url=A.html" width = "1px" height="1px"></img>
     </body>
 </html>
